--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 php_flag file_uploads on
-php_value upload_tmp_dir "github.com/fl0635/AnnivJu/utrail/uploads/"
+php_value upload_tmp_dir "/utrail/uploads/"
 php_value upload_max_filesize 10M
 
 RewriteEngine On
@@ -8,6 +8,6 @@ RewriteCond %{REQUEST_URI} /(images|styles|scripts|libs)/
 RewriteRule .* - [S=4]
 RewriteCond %{REQUEST_URI} /utrail/
 RewriteRule .* - [S=2]
-RewriteRule ^.*$ home.php [NC,S=1]
+RewriteRule ^.*$ home.html [NC,S=1]
 RewriteRule .* - [S=1]
 RewriteRule ^utrail\/.*$ utrail/index.php [NC]
